fix: make PMD rule exclusions actually take effect, fix mechanical violations (#29)
While clearing PMD's 213 reported violations found that maven-pmd-plugin has
no `excludeRules` config parameter — it's not a real thing, confirmed via
`mvn help:describe`. The existing exclusion block (and the one added for this
cleanup) was silently ignored the whole time; PMD ran the full, unfiltered
rulesets. Worse, backend/chatapp/pom.xml had its own duplicate plugin block
that fully shadowed the parent's config for the same execution id, so even a
working parent-level fix would never have applied.

Fixes both: adds backend/pmd-ruleset.xml, a real PMD ruleset file that
references the standard categories and excludes specific rules the way PMD
actually supports (<exclude> inside the <rule ref="category/...">> block),
and points both poms at it. Removes the dead duplicate plugin block from
chatapp/pom.xml (chatapp is the only module - the block added nothing but
the override footgun that caused this).

Excluded: OnlyOneReturn (fights this codebase's guard-clause early returns
and would increase nesting depth), LongVariable/ShortVariable (default
thresholds flag idiomatic names), CommentDefaultAccessModifier (not a
pattern used here), DataClass (flags our plain-class DTOs, which exist
because Checkstyle can't parse records here), AtLeastOneConstructor
(directly contradicts UnnecessaryConstructor for any class with no custom
construction logic - no class can satisfy both, keeping the more useful
one), and UnnecessaryImport (Checkstyle already enforces this).

Also fixes the ~65 mechanical violations that remained real: final
parameters, char-literal StringBuilder appends, StringBuilder initial
capacity, chained appends, redundant FQNs, dead @SuppressWarnings, a
premature declaration + simplifiable boolean return, an inefficient
trim().isEmpty() blank check, misplaced field declarations, a
field/method name collision on Persistable.isNew() (renamed the field,
not the interface method)